force-app/main/default/objects/Behavior_Detection_Config__c/Behavior_Detection_Config__c.object-meta.xml
<CustomObject>
    <description>Stores configuration settings for the behavior detection engine, controlling which detection patterns are enabled and their operational parameters.</description>
    <label>Behavior Detection Config</label>
    <nameField>
        <label>Behavior Detection Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Behavior Detection Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>