force-app/main/default/objects/Behavior_Detection_Config__c/fields/Accuracy_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables detection of forecast accuracy patterns to identify consistently inaccurate forecasters.</description>
    <label>Accuracy Enabled</label>
    <type>Checkbox</type>
</CustomField>