force-app/main/default/objects/Behavior_Detection_Config__c/fields/Coaching_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Delivery__c</fullName>
    <description>Channel through which coaching nudges are delivered to reps and managers.</description>
    <label>Coaching Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In_App_Only</fullName>
                <label>In App Only</label>
            </value>
            <value>
                <fullName>In_App_And_Slack</fullName>
                <label>In App And Slack</label>
            </value>
            <value>
                <fullName>In_App_And_Teams</fullName>
                <label>In App And Teams</label>
            </value>
            <value>
                <fullName>In_App_And_Email</fullName>
                <label>In App And Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>