force-app/main/default/objects/Behavior_Detection_Config__c/fields/Coaching_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables automated coaching nudges triggered by detected behavior patterns.</description>
    <label>Coaching Enabled</label>
    <type>Checkbox</type>
</CustomField>