force-app/main/default/objects/Behavior_Detection_Config__c/fields/Flag_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Flag_Retention_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Number of days to retain behavior detection flags before automatic archival or deletion.</description>
    <label>Flag Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>