force-app/main/default/objects/Behavior_Detection_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this behavior detection configuration is currently active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>