force-app/main/default/objects/Behavior_Detection_Config__c/fields/Min_Corroborating_Signals__c.field-meta.xml
<CustomField>
    <fullName>Min_Corroborating_Signals__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Minimum number of corroborating signals required before a behavior flag is raised.</description>
    <label>Min Corroborating Signals</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>