force-app/main/default/objects/Behavior_Detection_Config__c/fields/Nudge_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Nudge_Retention_Days__c</fullName>
    <defaultValue>180</defaultValue>
    <description>Number of days to retain coaching nudge records before automatic archival or deletion.</description>
    <label>Nudge Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>