force-app/main/default/objects/Behavior_Detection_Config__c/fields/Optimism_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Optimism_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables detection of excessive optimism in forecast submissions compared to actual outcomes.</description>
    <label>Optimism Enabled</label>
    <type>Checkbox</type>
</CustomField>