force-app/main/default/objects/Behavior_Detection_Config__c/fields/Regression_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Regression_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables detection of performance regression patterns where rep productivity trends downward.</description>
    <label>Regression Enabled</label>
    <type>Checkbox</type>
</CustomField>