force-app/main/default/objects/Behavior_Detection_Config__c/fields/Sandbagging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sandbagging_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables detection of sandbagging behavior where reps intentionally delay closing deals.</description>
    <label>Sandbagging Enabled</label>
    <type>Checkbox</type>
</CustomField>