force-app/main/default/objects/Behavior_Detection_Config__c/fields/Timing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Timing_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables detection of timing-related behavior patterns such as end-of-period deal clustering.</description>
    <label>Timing Enabled</label>
    <type>Checkbox</type>
</CustomField>